Roommatez Tab Fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
         <item>Calendar</item>
         <item>To-Do List</item>
         <item>Expenses</item>
+        <item>Roommatez</item>
     </string-array>
 
     <string name="title_activity_profile">ProfileActivity</string>
@@ -26,6 +27,7 @@
     <string name="action_settings_text">Settings</string>
     <string name="expense_name_text">Expense Name</string>
     <string name="add_expense_button_text">Add Expense</string>
+    <string name="add_roommate_button_text">Add Rooommate</string>
     <string name="due_date_text">Due Date</string>
     <string name="expense_amount_text">Expense Amount</string>
     <string name="author_text">Author</string>
@@ -38,5 +40,6 @@
     <string name="expense_amount_edit_text">Amount</string>
     <string name="expense_notes_edit_text">Notes</string>
     <string name="amount_hint_text">00.00</string>
+    <string name="title_activity_roommatez">RoommatezActivity</string>
 
 </resources>
